Adicionando imagens no template da listagem de pokemons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,37 @@
 </head>
 
 <body>
-    <h1>Pokédex</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi ducimus totam cumque rem accusantium rerum ex id
-        quis dolore sint illum ab, provident eius. Laboriosam est unde error ducimus saepe.</p>
+    <section class="content">
+        <h1>Pokedex</h1>
+        <ol class="pokemons">
+            <li>Bulbasaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="Bulbasaur">
+            </li>
+            <li>Ivysaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="Bulbasaur">
+            </li>
+            <li>Venusaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="Bulbasaur">
+            </li>
+            <li>Charmander
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="Bulbasaur">
+            </li>
+            <li>Charmeleon
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="Bulbasaur">
+            </li>
+            <li>Charizard
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="Bulbasaur">
+            </li>
+        </ol>
+    </section>
+
+
     <script src="./assets/js/main.js"></script>
 </body>
 
